ts常用的数据类型

--- a/ts/index.html
+++ b/ts/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>leetcode</title>
+  </head>
+  <body>
+    <script>
+      function ListNode(val) {
+        this.val = val
+        this.next = null
+      }
+      var partition = function (head, x) {
+        let small = new ListNode(0)
+        const smallHead = small
+        let big = new ListNode(0)
+        const bigHead = big
+        while (head !== null) {
+          if (head.val < x) {
+            small.next = head
+            small = small.next
+          } else {
+            big.next = head
+            big = big.next
+          }
+          head = head.next
+        }
+        big.next = null
+        small.next = bigHead.next
+        return smallHead.next
+      }
+      console.log(partition([1, 4, 3, 2, 5, 2], 3))
+    </script>
+  </body>
 </html>
