初始化项目

--- a/ts/index.html
+++ b/ts/index.html
@@ -8,28 +8,38 @@
   </head>
   <body>
     <script>
-      function ListNode(val) {
-        this.val = val
-        this.next = null
-      }
-      var partition = function (head, x) {
-        let small = new ListNode(0)
-        const smallHead = small
-        let big = new ListNode(0)
-        const bigHead = big
-        while (head !== null) {
-          if (head.val < x) {
-            small.next = head
-            small = small.next
-          } else {
-            big.next = head
-            big = big.next
+      /**
+       * @param {character[][]} grid
+       * @return {number}
+       */
+
+      var numIslands = function (grid) {
+        let count = 0
+        for (let i = 0; i < grid.length; i++) {
+          for (let j = 0; j < grid[0].length; j++) {
+            if (grid[i][j] === '1') {
+              dfs(grid, i, j)
+              count++
+            }
           }
-          head = head.next
         }
-        big.next = null
-        small.next = bigHead.next
-        return smallHead.next
+        return count
+      }
+      function dfs(grid, i, j) {
+        if (
+          i < 0 ||
+          j < 0 ||
+          i >= grid.length ||
+          j >= grid[0].lenght ||
+          grid[i][j] === '0'
+        ) {
+          return
+        }
+        grid[i][j] = '0'
+        dfs(grid, i - 1, j)
+        dfs(grid, i + 1, j)
+        dfs(grid, i, j - 1)
+        dfs(grid, i, j + 1)
       }
       console.log(partition([1, 4, 3, 2, 5, 2], 3))
     </script>
